set up the structure

--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
-<body>
-  <main>
-    Improve your front-end skills by building projects
-    Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+<body class="main_container flex">
+  <main class="qr_box flex">
+    <div class="qr_code_container">
+      c
+    </div>
+    <div class="improve_txt_container">
+      b
+    </div>
+    <div class="visit_msg">
+      a
+    </div>
   </main>
-  
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
