Structured all html levels

--- a/index.html
+++ b/index.html
@@ -10,21 +10,20 @@
   <title>Frontend Mentor | QR code component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body class="main_container flex">
   <main class="qr_box flex">
     <div class="qr_code_container">
-      c
     </div>
-    <div class="improve_txt_container">
-      b
+    <div class="improve_txt_container flex">
+      <h2>
+        Imporove your front-end skills by building projects
+      </h2>
     </div>
     <div class="visit_msg">
-      a
+      <p>
+        Scan QR code to visit Frontend Mentor and take your coding skills to the next level
+      </p>
     </div>
   </main>
   <footer>
