--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com"/>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700;900&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href = "./index.css"/>
   
   <title>Frontend Mentor | QR code component</title>
@@ -20,7 +23,7 @@
         Imporove your front-end skills by building projects
       </h2>
     </div>
-    <div class="visit_msg">
+    <div class="visit_msg flex">
       <p>
         Scan QR code to visit Frontend Mentor and take your coding skills to the next level
       </p>
