fix some typos error

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="improve_txt_container flex">
       <h2>
-        Imporove your front-end skills by building projects
+        Improve your front-end skills by building projects
       </h2>
     </div>
     <div class="visit_msg flex">
@@ -32,7 +32,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Romuald. S.A.</a>.
     </div>
   </footer>
 </body>
