--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="qr_code_container">
     </div>
     <div class="improve_txt_container flex">
+<!--    Hope all is well now..    -->
       <h1>
         Improve your front-end skills by building projects
       </h1>
